--- a/Central Dashboard/style.css
+++ b/Central Dashboard/style.css
@@ -5,7 +5,14 @@
   }
   
   body {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    flex-direction: column;
     font-family: Arial, sans-serif;
+    
   }
   .navbar {
     display: flex;
@@ -14,6 +21,7 @@
     background-color: #3A2D4A;
     color: #fff;
     padding: 10px 20px;
+    width: 100%;
     position: relative;
     height: 100px;
   }
@@ -24,35 +32,41 @@
   }
   
   .nav-links {
-    display: flex;
+    width: 60%;
+    
     list-style: none;
-    gap: 20px;
+    gap: 10px;
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 1rem;
+    scrollbar-width: none;
   }
-  
+  .nav-links::-webkit-scrollbar {
+    width: 8px; 
+}
+.nav-links::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+.nav-links::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
   .nav-links li a {
     text-decoration: none;
     color: #fff;
     font-size: 1em;
     transition: color 0.3s;
+    display: flex;
+    width: 140px;
   }
   
   .nav-links li a:hover {
     color: #00bcd4;
   }
   
-  .signup-btn {
-    background-color: #00bcd4;
-    border: none;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .signup-btn:hover {
-    background-color: #0097a7;
-  }
   
   .menu-toggle {
     display: none;
@@ -148,7 +162,7 @@
   .section{
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 70px;
     margin-bottom: 40px;
   }
   .department{
@@ -160,15 +174,13 @@
   }
   .department h2{
     border: 0.25px solid #3A2D4A;
-    width: 100%;
+    width: 350px;
     height: 50px;
-    margin-left: 40px;
-    padding-top: 10px;
+    padding: 10px;
     color: #3A2D4A;
   }
   .department-d{
-    width: 100%;
-    margin-left: 50px;
+    width: 300px;
     height: 50px;
     border-radius: 10px;
     background-color: #3A2D4A;
@@ -179,7 +191,7 @@
   .department-d a{
     text-decoration: none;
     color: white;
-    font-weight: 600;
+    padding: 10px;
   }
   .member{
     display: flex;
@@ -190,15 +202,13 @@
   }
   .member h2{
     border: 0.25px solid #3A2D4A;
-    width: 100%;
+    width: 350px;
     height: 50px;
-    margin-left: 40px;
-    padding-top: 10px;
+    padding: 10px;
     color: #3A2D4A;
   }
   .member-d{
-    width: 100%;
-    margin-left: 50px;
+    width: 300px;
     height: 50px;
     border-radius: 10px;
     background-color: #3A2D4A;
@@ -208,28 +218,26 @@
   .member-d a{
     text-decoration: none;
     color: #fff;
-    font-weight: 600;
+    padding: 10px;
   }
   .project {
-    display: flex;
-    width: 20%;
-    height: 90px;
-    margin: 0px 0px 30px 570px;
-    border: 0.25px solid #3A2D4A;
-    justify-content: center;
     color: #3A2D4A;
+    padding: 20px 0px 20px 0px;
+    height: 80px;
     text-align: center;
-    align-items: center;
+    width: 100%;
+    max-width: 400px;
+    border: 1px solid #3A2D4A;
+    margin: 40px 0px 70px 0px;
   }
   .ledgers{
-    display: flex;
-    width: 19%;
-    margin-left: 580px;
-    border: 0.25px solid #3A2D4A;
-    justify-content: center;
     color: #3A2D4A;
+    padding: 10px;
     text-align: center;
-    align-items: center;
+    width: 100%;
+    max-width: 500px;
+    border: 1px solid #3A2D4A;
+   
   }
   .pas{
     display: flex ;
@@ -338,12 +346,11 @@
     width: 100%;
   }
   .s-more button{
-    background-color: #3A2D4A;
-    color: #fff;
+    border-radius: 20px;
     border: none;
     height: 30px;
     padding: 10px;
-    box-shadow: #333333;
+    box-shadow: 5px 5px 10px #333;
     cursor: pointer;
   }
   
@@ -384,26 +391,38 @@
       gap: 25px;
     }
     .department h2{
-      width: 70%;
+      width: 300px;
     }
     .department-d{
-      width: 60%;
+      width: 80%;
+      height: 20px;
     }
     .member h2{
-      width: 70%;
+      width: 300px;
     }
     .member-d{
-      width: 60%;
+      width: 80%;
+      height: 20px;
     }
     .project{
-      margin: 0px 0px 60px 100px;
-      height: 30px;
-      width: 260px;
+      width: 60%;
+      
+      height: 40px;
     }
     .ledgers{
-      margin: 0px 0px 0px 100px;
-      height: 30px;
-      width: 260px;
+      width: 60%;
+      padding: 15px;
+      height: 40px;
+      
     }
   }
-  
+  @media (max-width: 480px) {
+    .project{
+      width: 80%; 
+      padding: 10px;
+    }
+    .ledgers {
+      width: 80%; 
+      padding: 10px;
+    }
+  }
